[package]
name = "phi-accrual-detector"
version = "0.3.1"
edition = "2021"
authors = ["Uddeshya Singh <singhuddeshyaofficial@gmail.com>"]
rust-version = "1.71.0"
description = "Pluggable phi-accrual-detection package for healthcheck of monitored processes"
readme = "README.md"
repository = "https://github.com/uds5501/phi-accrual-detector"
keywords = ["phi-accrual", "healthcheck", "detector", "monitoring", "distributed-system"]
categories = ["algorithms"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }
async-trait = "0.1.80"
libm = "0.2.8"
async-std = "1.12.0"
rand = "0.9.0-alpha.1"